--- a/Deforum_Stable_Diffusion.ipynb
+++ b/Deforum_Stable_Diffusion.ipynb
@@ -686,8 +686,8 @@
         "def DeforumAnimArgs():\n",
         "\n",
         "    #@markdown ####**Animation:**\n",
-        "    animation_mode = 'None' #@param ['None', '2D', '3D', 'Video Input', 'Interpolation'] {type:'string'}\n",
-        "    max_frames = 1000 #@param {type:\"number\"}\n",
+        "    animation_mode = '2D' #@param ['None', '2D', '3D', 'Video Input', 'Interpolation'] {type:'string'}\n",
+        "    max_frames = 20 #@param {type:\"number\"}\n",
         "    border = 'wrap' #@param ['wrap', 'replicate'] {type:'string'}\n",
         "\n",
         "    #@markdown ####**Motion Parameters:**\n",
@@ -809,8 +809,8 @@
         "animation_prompts = {\n",
         "    0: \"a beautiful apple, trending on Artstation\",\n",
         "    20: \"a beautiful banana, trending on Artstation\",\n",
-        "    30: \"a beautiful coconut, trending on Artstation\",\n",
-        "    40: \"a beautiful durian, trending on Artstation\",\n",
+        "    # 30: \"a beautiful coconut, trending on Artstation\",\n",
+        "    # 40: \"a beautiful durian, trending on Artstation\",\n",
         "}"
       ],
       "outputs": [],
@@ -1336,16 +1336,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "cellView": "form",
         "id": "no2jP8HTMBM0"
       },
       "source": [
-        "skip_video_for_run_all = True #@param {type: 'boolean'}\n",
+        "skip_video_for_run_all = False #@param {type: 'boolean'}\n",
         "fps = 12 #@param {type:\"number\"}\n",
         "#@markdown **Manual Settings**\n",
-        "use_manual_settings = False #@param {type:\"boolean\"}\n",
-        "image_path = \"/content/drive/MyDrive/AI/StableDiffusion/2022-09/20220903000939_%05d.png\" #@param {type:\"string\"}\n",
-        "mp4_path = \"/content/drive/MyDrive/AI/StableDiffusion/2022-09/20220903000939.mp4\" #@param {type:\"string\"}\n",
+        "use_manual_settings = True #@param {type:\"boolean\"}\n",
+        "image_path = \"/content/drive/MyDrive/AI/StableDiffusion/2022-09/robotic-vid-7/20220924232816_%05d.png\" #@param {type:\"string\"}\n",
+        "mp4_path = \"/content/drive/MyDrive/AI/20220924232816.mp4\" #@param {type:\"string\"}\n",
         "\n",
         "\n",
         "if skip_video_for_run_all == True:\n",
@@ -1358,9 +1357,10 @@
         "    print(f\"{image_path} -> {mp4_path}\")\n",
         "\n",
         "    if use_manual_settings:\n",
-        "        max_frames = \"200\" #@param {type:\"string\"}\n",
+        "        max_frames = \"500\" #@param {type:\"string\"}\n",
         "    else:\n",
         "        image_path = os.path.join(args.outdir, f\"{args.timestring}_%05d.png\")\n",
+        "        print(image_path)\n",
         "        mp4_path = os.path.join(args.outdir, f\"{args.timestring}.mp4\")\n",
         "        max_frames = str(anim_args.max_frames)\n",
         "\n",
