--- a/Deforum_Stable_Diffusion.ipynb
+++ b/Deforum_Stable_Diffusion.ipynb
@@ -801,16 +801,16 @@
       "source": [
         "\n",
         "prompts = [\n",
-        "    \"a beautiful forest by Asher Brown Durand, trending on Artstation\", #the first prompt I want\n",
-        "    \"a beautiful portrait of a woman by Artgerm, trending on Artstation\", #the second prompt I want\n",
-        "    #\"the third prompt I don't want it I commented it with an\",\n",
-        "]\n",
+        "  # \"a massive army of robots marching across a desert landscape while a woman in red cloth stands among them wearing a green military uniform hidden under a mask, by sylvain sarrailh, rossdraws, ambient light, ultra detailed, fantasy artwork, 8 k, volumetric lighting, trending on artstation, award winning, beautiful scenery, very beautiful.Marco Mazzoni \",\n",
+        "  # \"a beautiful young indian woman in desert with few parts of alien like cyberpunk armor, beautiful eyes, red cloth, dramatic pose, minimal sleek design armor style, , mohenjo daro, cinematic, beautifully lit,  hyper realistic,intricate details, sharp focus, Marco Mazzoni\",\n",
+        "  \"in the middle of a adobe house kasbah town, mud and brick houses, merchant street, pueblo dense architecture, narrow streets, desert, iosometric squares & streets, crowd in red. Elevated huge persian temple in the background with round roof, big door. Scenic view at night, underexposed, volumetric lighting, dark fantasy, style of game of thrones, concept art , insane details, Marco Mazzoni\"\n",
+        "  #\"a beautiful young indian woman in desert with few parts of alien like cyberpunk armor, beautiful eyes, red cloth, dramatic pose, minimal sleek design armor style, beautiful face and deep eyes, a colossal brain dream bot mothership, mohenjo daro tatto on forhead, martian environment, hyper details, cinematic, volumetric lighting, mohenjo daro, sand storm, Marco Mazzoni\",\n",
+        "  # \"a close up illustration of a beautiful young indian woman in desert with few parts of alien like cyberpunk armor, red cloth, dramatic pose, sci-fi environment set in a nightmarish universe of odd forms and somber tapestry , hr giger, wadim kashin, in zdzisław beksiński color scheme,mohenjo daro,  hyper realistic, Marco Mazzoni \",\n",
+        "  # \"a close up illustration of a beautiful young indian woman in desert with few parts of alien like cyberpunk armor, red cloth, dramatic pose, beautiful eyes, minimal sleek design armor style, symmetrical face, dramatic pose, elegant, highly detailed, forehead tattoo of seals of indus civilization, earrings, a beautiful gargantuan battle spaceship stuck in the ground, mohenjo daro, rainstorm, lightning, Marco Mazzoni\",\n",
+        "]*5\n",
         "\n",
         "animation_prompts = {\n",
-        "    0: \"a beautiful apple, trending on Artstation\",\n",
-        "    20: \"a beautiful banana, trending on Artstation\",\n",
-        "    # 30: \"a beautiful coconut, trending on Artstation\",\n",
-        "    # 40: \"a beautiful durian, trending on Artstation\",\n",
+        "    0: \"brutalist soviet architecture on mars, intricate, elegant, highly detailed, centered, digital painting, artstation, concept art, smooth, sharp focus, illustration, artgerm, tomasz alen kopera, peter mohrbacher, donato giancola, joseph christian leyendecker, wlop, boris vallejo n\",\n",
         "}"
       ],
       "outputs": [],
@@ -835,15 +835,15 @@
         "def DeforumArgs():\n",
         "\n",
         "    #@markdown **Image Settings**\n",
-        "    W = 512 #@param\n",
-        "    H = 512 #@param\n",
+        "    W = 712 #@param\n",
+        "    H = 712 #@param\n",
         "    W, H = map(lambda x: x - x % 64, (W, H))  # resize to integer multiple of 64\n",
         "\n",
         "    #@markdown **Sampling Settings**\n",
         "    seed = -1 #@param\n",
         "    sampler = 'klms' #@param [\"klms\",\"dpm2\",\"dpm2_ancestral\",\"heun\",\"euler\",\"euler_ancestral\",\"plms\", \"ddim\"]\n",
         "    steps = 50 #@param\n",
-        "    scale = 7 #@param\n",
+        "    scale = 10 #@param\n",
         "    ddim_eta = 0.0 #@param\n",
         "    dynamic_threshold = None\n",
         "    static_threshold = None   \n",
@@ -855,7 +855,7 @@
         "\n",
         "    #@markdown **Batch Settings**\n",
         "    n_batch = 1 #@param\n",
-        "    batch_name = \"StableFun\" #@param {type:\"string\"}\n",
+        "    batch_name = \"experiments\" #@param {type:\"string\"}\n",
         "    filename_format = \"{timestring}_{index}_{prompt}.png\" #@param [\"{timestring}_{index}_{seed}.png\",\"{timestring}_{index}_{prompt}.png\"]\n",
         "    seed_behavior = \"iter\" #@param [\"iter\",\"fixed\",\"random\"]\n",
         "    make_grid = False #@param {type:\"boolean\"}\n",
@@ -1336,7 +1336,8 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "no2jP8HTMBM0"
+        "id": "no2jP8HTMBM0",
+        "cellView": "form"
       },
       "source": [
         "skip_video_for_run_all = False #@param {type: 'boolean'}\n",
