--- a/Deforum_Stable_Diffusion.ipynb
+++ b/Deforum_Stable_Diffusion.ipynb
@@ -692,10 +692,10 @@
         "\n",
         "    #@markdown ####**Motion Parameters:**\n",
         "    angle = \"0:(0)\"#@param {type:\"string\"}\n",
-        "    zoom = \"0:(1.04)\"#@param {type:\"string\"}\n",
+        "    zoom = \"0:(0.99)\"#@param {type:\"string\"}\n",
         "    translation_x = \"0:(0)\"#@param {type:\"string\"}\n",
         "    translation_y = \"0:(0)\"#@param {type:\"string\"}\n",
-        "    translation_z = \"0:(10)\"#@param {type:\"string\"}\n",
+        "    translation_z = \"0:(0)\"#@param {type:\"string\"}\n",
         "    rotation_3d_x = \"0:(0)\"#@param {type:\"string\"}\n",
         "    rotation_3d_y = \"0:(0)\"#@param {type:\"string\"}\n",
         "    rotation_3d_z = \"0:(0)\"#@param {type:\"string\"}\n",
@@ -801,16 +801,15 @@
       "source": [
         "\n",
         "prompts = [\n",
-        "  # \"a massive army of robots marching across a desert landscape while a woman in red cloth stands among them wearing a green military uniform hidden under a mask, by sylvain sarrailh, rossdraws, ambient light, ultra detailed, fantasy artwork, 8 k, volumetric lighting, trending on artstation, award winning, beautiful scenery, very beautiful.Marco Mazzoni \",\n",
-        "  # \"a beautiful young indian woman in desert with few parts of alien like cyberpunk armor, beautiful eyes, red cloth, dramatic pose, minimal sleek design armor style, , mohenjo daro, cinematic, beautifully lit,  hyper realistic,intricate details, sharp focus, Marco Mazzoni\",\n",
-        "  \"in the middle of a adobe house kasbah town, mud and brick houses, merchant street, pueblo dense architecture, narrow streets, desert, iosometric squares & streets, crowd in red. Elevated huge persian temple in the background with round roof, big door. Scenic view at night, underexposed, volumetric lighting, dark fantasy, style of game of thrones, concept art , insane details, Marco Mazzoni\"\n",
-        "  #\"a beautiful young indian woman in desert with few parts of alien like cyberpunk armor, beautiful eyes, red cloth, dramatic pose, minimal sleek design armor style, beautiful face and deep eyes, a colossal brain dream bot mothership, mohenjo daro tatto on forhead, martian environment, hyper details, cinematic, volumetric lighting, mohenjo daro, sand storm, Marco Mazzoni\",\n",
-        "  # \"a close up illustration of a beautiful young indian woman in desert with few parts of alien like cyberpunk armor, red cloth, dramatic pose, sci-fi environment set in a nightmarish universe of odd forms and somber tapestry , hr giger, wadim kashin, in zdzisław beksiński color scheme,mohenjo daro,  hyper realistic, Marco Mazzoni \",\n",
-        "  # \"a close up illustration of a beautiful young indian woman in desert with few parts of alien like cyberpunk armor, red cloth, dramatic pose, beautiful eyes, minimal sleek design armor style, symmetrical face, dramatic pose, elegant, highly detailed, forehead tattoo of seals of indus civilization, earrings, a beautiful gargantuan battle spaceship stuck in the ground, mohenjo daro, rainstorm, lightning, Marco Mazzoni\",\n",
+        "#  \"( ( ( ( ( hyperrealist portrait of a red tesla car front view ) ) ) ) ) , black background, photorealistic, octane render, unreal engine, dynamic lighting,  beautiful,  perfect factions, poster, volumetric lighting, very detailed faces, 4 k, award winning  \"\n",
+        "#  \"An illustration of a bridge from one end in Berlin, berlin train,  people are walking on the bridge,  Francis Criss\"\n",
+        "#  \"An kid pressing a button on a huge  each horse has a different color, franz marc\"\n",
         "]*5\n",
         "\n",
         "animation_prompts = {\n",
-        "    0: \"brutalist soviet architecture on mars, intricate, elegant, highly detailed, centered, digital painting, artstation, concept art, smooth, sharp focus, illustration, artgerm, tomasz alen kopera, peter mohrbacher, donato giancola, joseph christian leyendecker, wlop, boris vallejo n\",\n",
+        "    0:  \"a tesla car front view, an isolated road in desert, photorealistic, hyperrealism, insanely detailed, unreal engine, octane render, sharp focus, 8k, volumetric lighting, wide-angle\",\n",
+        "    5:  \"a tesla car front view, an isolated road in desert, photorealistic, hyperrealism, insanely detailed, unreal engine, octane render, sharp focus, 8k, cinematic lighting, reflection of a girl on the front mirror, wide-angle\",\n",
+        "    10: \"a tesla car front view, an isolated road in desert, photorealistic, hyperrealism, insanely detailedd, unreal engine, octane render, sharp focus, 8k, cinematic lighting, reflection of galaxy on the front mirror, raining, wide-angle\"\n",
         "}"
       ],
       "outputs": [],
@@ -835,15 +834,15 @@
         "def DeforumArgs():\n",
         "\n",
         "    #@markdown **Image Settings**\n",
-        "    W = 712 #@param\n",
-        "    H = 712 #@param\n",
+        "    W = 512 #@param\n",
+        "    H = 512 #@param\n",
         "    W, H = map(lambda x: x - x % 64, (W, H))  # resize to integer multiple of 64\n",
         "\n",
         "    #@markdown **Sampling Settings**\n",
         "    seed = -1 #@param\n",
         "    sampler = 'klms' #@param [\"klms\",\"dpm2\",\"dpm2_ancestral\",\"heun\",\"euler\",\"euler_ancestral\",\"plms\", \"ddim\"]\n",
-        "    steps = 50 #@param\n",
-        "    scale = 10 #@param\n",
+        "    steps = 20 #@param\n",
+        "    scale = 7 #@param\n",
         "    ddim_eta = 0.0 #@param\n",
         "    dynamic_threshold = None\n",
         "    static_threshold = None   \n",
@@ -1343,7 +1342,7 @@
         "skip_video_for_run_all = False #@param {type: 'boolean'}\n",
         "fps = 12 #@param {type:\"number\"}\n",
         "#@markdown **Manual Settings**\n",
-        "use_manual_settings = True #@param {type:\"boolean\"}\n",
+        "use_manual_settings = False #@param {type:\"boolean\"}\n",
         "image_path = \"/content/drive/MyDrive/AI/StableDiffusion/2022-09/robotic-vid-7/20220924232816_%05d.png\" #@param {type:\"string\"}\n",
         "mp4_path = \"/content/drive/MyDrive/AI/20220924232816.mp4\" #@param {type:\"string\"}\n",
         "\n",
