--- a/Deforum_Stable_Diffusion.ipynb
+++ b/Deforum_Stable_Diffusion.ipynb
@@ -60,7 +60,7 @@
         "        drive_path = \"/content/drive\"\n",
         "        drive.mount(drive_path,force_remount=force_remount)\n",
         "        models_path_gdrive = \"/content/drive/MyDrive/AI/models\" #@param {type:\"string\"}\n",
-        "        output_path_gdrive = \"/content/drive/MyDrive/AI/StableDiffusion\" #@param {type:\"string\"}\n",
+        "        output_path_gdrive = \"/content/drive/MyDrive/AI/lovelace\" #@param {type:\"string\"}\n",
         "        models_path = models_path_gdrive\n",
         "        output_path = output_path_gdrive\n",
         "    except:\n",
@@ -686,7 +686,7 @@
         "def DeforumAnimArgs():\n",
         "\n",
         "    #@markdown ####**Animation:**\n",
-        "    animation_mode = '2D' #@param ['None', '2D', '3D', 'Video Input', 'Interpolation'] {type:'string'}\n",
+        "    animation_mode = 'None' #@param ['None', '2D', '3D', 'Video Input', 'Interpolation'] {type:'string'}\n",
         "    max_frames = 20 #@param {type:\"number\"}\n",
         "    border = 'wrap' #@param ['wrap', 'replicate'] {type:'string'}\n",
         "\n",
